Fixes a bug were UKM metrics were not being logged for autofill on iOS

autofill::AutofillManager passes FormData.main_frame_origin to the
autofill::AutofillMetrics::FormInteractionsUkmLogger. This property was not
being set in autofill_agent.mm, therefore no metrics were being logged.

Bug: 812070
Change-Id: I1e337ae6af575fc6182e5b360e44f12427d3d5be
Reviewed-on: https://chromium-review.googlesource.com/917534
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Commit-Queue: Olivier Robin <olivierrobin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536678}
Former-commit-id: 80f0c5570649c35a869429b2ab8c381a0a7246cb